tunneling-outbound-traffic/internal-listeners-http-services/gateway/mutual/sidecar.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9902

static_resources:
  listeners:
  - name: "0.0.0.0_80"
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    listener_filters:
    - name: envoy.filters.listener.original_dst
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
              path: /dev/stdout
              format: "[%START_TIME%] %DOWNSTREAM_REMOTE_ADDRESS% \"%REQ(:METHOD)% %UPSTREAM_HOST% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" - %RESPONSE_CODE% - %RESPONSE_FLAGS% \n"
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: outbound|443||www.wikipedia.org
            virtual_hosts:
            - name: www.wikipedia.org
              domains:
              - "www.wikipedia.org"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: outbound|443|originate-mtls|egress-gateway
          stat_prefix: outbound|443|originate-mtls|egress-gateway
  clusters:
  - name: outbound|443|originate-mtls|egress-gateway
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: outbound|443|originate-mtls|egress-gateway
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: egress-gateway
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: /etc/pki/tls/certs/client.default.svc.cluster.local.crt
            private_key:
              filename: /etc/pki/tls/private/client.default.svc.cluster.local.key
          validation_context:
            trusted_ca:
              filename: /etc/pki/tls/certs/root-ca.crt
        sni: egress-gateway
